# smart-job-tracker

./: .dockerignore  .env.example  .gitignore  CASE_STUDY.md  CLOUDFLARE_DEPLOYMENT.md  DEPLOYMENT.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  job_dashboard.html  job_tracker.json  job_tracker.md  main.py  pyproject.toml  ranked_jobs.md  resume.json  wrangler.toml
.github/workflows/: ci.yml  cron.yml
src/: cloudflare_worker.js
src/job_scraper/: __init__.py  apify_scraper.py  claude_scorer.py  cli.py  d1_schema.sql  gemini_scorer.py  metrics.py  models.py  orchestrator.py  resume_loader.py
src/job_scraper/web/: __init__.py  app.py  dashboard.html
tests/: __init__.py  conftest.py  test_claude_scorer.py  test_cli.py  test_deduplication.py  test_metrics.py  test_models.py  test_resume.txt  test_resume_loader.py  test_web_app.py
